--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.2.1",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/lab": "^6.0.0-beta.21",
+    "@mui/material": "^6.3.0",
+    "@mui/system": "^6.3.0",
+    "@mui/x-data-grid": "^7.23.3",
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
@@ -30,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
-    "vite": "^6.0.3"
+    "typescript": "^5.7.2",
+    "vite": "^6.0.5"
   }
 }
