--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.3.0",
+    "@mui/icons-material": "^6.3.1",
     "@mui/lab": "^6.0.0-beta.21",
-    "@mui/material": "^6.3.0",
+    "@mui/material": "^6.3.1",
     "@mui/system": "^6.3.0",
     "@mui/x-data-grid": "^7.23.3",
     "@react-spring/web": "^9.7.5",
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.0"
   },
   "devDependencies": {
