--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^7.23.3",
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.7",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
