--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@mui/system": "^6.3.0",
     "@mui/x-data-grid": "^7.23.3",
     "@react-spring/web": "^9.7.5",
+    "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
+    "cookies": "^0.9.1",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^7.1.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
