--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.3.1",
+    "@mui/icons-material": "^6.4.7",
     "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.3.1",
     "@mui/system": "^6.3.0",
     "@mui/x-data-grid": "^7.23.3",
+    "@mui/x-date-pickers": "^7.27.1",
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.9",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.4.7",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
