--- a/package.json
+++ b/package.json
@@ -13,27 +13,29 @@
     "@date-io/date-fns": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.7",
+    "@mui/icons-material": "^6.4.11",
     "@mui/lab": "^6.0.0-beta.21",
-    "@mui/material": "^6.3.1",
+    "@mui/material": "^6.4.11",
     "@mui/system": "^6.3.0",
     "@mui/x-data-grid": "^7.23.3",
     "@mui/x-date-pickers": "^7.27.1",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
+    "cookies": "^0.9.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^12.4.7",
-    "cookies": "^0.9.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "recharts": "^2.15.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
