--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "axios": "^1.7.9",
     "cookies": "^0.9.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.503.0",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-calendar": "^5.1.0",
