--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "cookies": "^0.9.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
@@ -32,12 +33,13 @@
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
-    "recharts": "^2.15.2",
+    "recharts": "^2.15.3",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
