--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookies": "^0.9.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
