--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.503.0",
     "react": "^18.3.1",
     "react-avatar": "^5.0.3",
+    "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
