--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-dropzone": "^14.3.8",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
